--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ branca~=0.7.2
 folium~=0.17.0
 APScheduler~=3.10.4
 pillow~=10.4.0
+pytz~=2024.1
+requests~=2.32.3
+beautifulsoup4~=4.12.3
+PyYAML~=6.0.1
