--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,17 +34,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          if [ -f Pipfile ]; then pip install pipenv && pipenv install --dev; fi
-
-      - name: Run tests
-        run: |
-          if [ -f manage.py ]; then python manage.py test; fi
+          pip install -r requirements.txt
 
       - name: Build package
         run: |
-          python setup.py sdist bdist_wheel
+          pyinstaller --onefile manage.py
 
       - name: Archive build artifacts
         if: success()
