--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
             arch: amd64
 
     runs-on: ${{ matrix.platform }}
+    env:
+      PIP_DISABLE_PIP_VERSION_CHECK: "1"
+      PIP_NO_CACHE_DIR: "1"
 
     steps:
       - name: Checkout code
@@ -34,11 +37,22 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Build package
+      - name: Install PyInstaller
+        run: |
+          pip install pyinstaller
+
+      - name: Build package on Linux
+        if: runner.os == 'Linux'
         run: |
           pyinstaller --onefile manage.py
+
+      - name: Build package on Windows
+        if: runner.os == 'Windows'
+        run: |
+          pyinstaller --onefile --windowed manage.py
 
       - name: Archive build artifacts
         if: success()
