--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,8 @@
 model:
   script:
-    input: "/Users/wenyanglu/Workspace/github/hydrologic_forecasting/storage/input"
-    output: "/Users/wenyanglu/Workspace/github/hydrologic_forecasting/storage/output"
-    bat_path: ""
+    input: "/Users/wenyanglu/Workspace/github/hydrologic_forecasting/storage/input" # 模型的输入路径
+    output: "/Users/wenyanglu/Workspace/github/hydrologic_forecasting/storage/output" # 模型的输出路径
+    bat_path: "" # bat脚本的路径
 
 scheduler:
   rainfall:
