--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,11 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [ ubuntu-latest, windows-latest ]
+        platform: [ ubuntu-latest, windows-latest, macos-latest ]
         include:
           - platform: ubuntu-latest
             arch: amd64
-          - platform: ubuntu-latest
+          - platform: macos-latest
             arch: arm64
           - platform: windows-latest
             arch: amd64
